030-software/fluxcd/apps/backrest/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backrest
spec:
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: backrest
  template:
    metadata:
      labels:
        app: backrest
        nfs-genji: "true"
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchLabels:
                    app: backrest
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: backrest
      containers:
        - name: backrest
          image: ghcr.io/garethgeorge/backrest:v1.14.1-alpine
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          args:
            - /backrest
            - -bind-address
            - :9898
          ports:
            - name: http
              containerPort: 9898
              protocol: TCP
          volumeMounts:
            - name: temp
              mountPath: /tmp
            - name: data
              mountPath: /data
            - name: config
              mountPath: /config
            - name: cache
              mountPath: /cache
            - name: backups
              mountPath: /mnt/backups
            - name: shared
              mountPath: /mnt/shared
          startupProbe:
            tcpSocket:
              port: http
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            limits:
              memory: 1024Mi
            requests:
              memory: 64Mi
              cpu: 100m
      volumes:
        - name: temp
          emptyDir: {}
        - name: config
          persistentVolumeClaim:
            claimName: config
        - name: data
          persistentVolumeClaim:
            claimName: data
        - name: cache
          persistentVolumeClaim:
            claimName: cache
        - name: backups
          nfs:
            server: genji.home.arpa
            path: /backups
        - name: shared
          nfs:
            server: genji.home.arpa
            path: /shared
