030-software/fluxcd/apps/backrest/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backrest
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: backrest
