030-software/fluxcd/apps/backrest/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backrest
  annotations:
    dashboard.${domain}/name: backrest
    dashboard.${domain}/url: https://backrest.${domain}
    dashboard.${domain}/icon: harddisk
spec:
  hostnames:
  - backrest.${domain}
  parentRefs:
  - name: cilium
    namespace: cilium
  rules:
  - backendRefs:
    - name: backrest
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
